Resolved sidebar not showing issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,14 +90,13 @@ button:disabled {
 .chat__sidebar {
   overflow-y:auto;
   width:320px;
-  height:100vh;
+  height:100vh;S
   background:-moz-linear-gradient(125deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
   background:-webkit-gradient(linear,left top,right bottom,color-stop(0,rgba(49,84,129,1)),color-stop(100%,rgba(39,107,130,1)));
   background:-webkit-linear-gradient(125deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
   background:-o-linear-gradient(125deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
   background:-ms-linear-gradient(125deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
   background:linear-gradient(325deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
-  transform: translateX(0);
 }
 
 .chat__footer,.chat__sidebar li {
@@ -207,7 +206,7 @@ button:disabled {
   .chat__sidebar{
     position: absolute;
     overflow-y:auto;
-    width:200px;
+    width:100vw;
     height:100vh;
     background:-moz-linear-gradient(125deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
     background:-webkit-gradient(linear,left top,right bottom,color-stop(0,rgba(49,84,129,1)),color-stop(100%,rgba(39,107,130,1)));
@@ -215,8 +214,8 @@ button:disabled {
     background:-o-linear-gradient(125deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
     background:-ms-linear-gradient(125deg,(39,107,130,1) 0,rgba(49,84,129,1) 100%);
     background:linear-gradient(325deg,rgba(39,107,130,1) 0,rgba(49,84,129,1) 100%);
-    transform: translateX(-100%);
-    transition: all 0.3s;
+    display: none;
+    transition: all 0.5s;
   }
 
   .chat__footer{
